--- a/Task 2/imbd.ipynb
+++ b/Task 2/imbd.ipynb
@@ -1760,7 +1760,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "\n",
+    "numeric_cols = df.columns[df.dtypes != object].tolist()\n",
+    "# numeric_cols\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range=(0,1))\n",
+    "df[numeric_cols] = scaler.fit_transform(df[numeric_cols])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1799,68 +1815,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>109.0</td>\n",
-       "      <td>2136.847114</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>8.850000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>8.000000</td>\n",
+       "      <td>0.662921</td>\n",
+       "      <td>0.971429</td>\n",
+       "      <td>0.293333</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.662921</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.100949</td>\n",
+       "      <td>0.042443</td>\n",
+       "      <td>0.063454</td>\n",
+       "      <td>0.061159</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2021.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>234.788646</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>8.500000</td>\n",
-       "      <td>9.900000</td>\n",
-       "      <td>7.000000</td>\n",
+       "      <td>0.550562</td>\n",
+       "      <td>0.990476</td>\n",
+       "      <td>0.230000</td>\n",
+       "      <td>0.106951</td>\n",
+       "      <td>0.550562</td>\n",
+       "      <td>0.000085</td>\n",
+       "      <td>0.081902</td>\n",
+       "      <td>0.040140</td>\n",
+       "      <td>0.085780</td>\n",
+       "      <td>0.049620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>110.0</td>\n",
-       "      <td>802.884065</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>5.400000</td>\n",
-       "      <td>10.420000</td>\n",
-       "      <td>5.400000</td>\n",
-       "      <td>6.450000</td>\n",
+       "      <td>0.370787</td>\n",
+       "      <td>0.971429</td>\n",
+       "      <td>0.296667</td>\n",
+       "      <td>0.373681</td>\n",
+       "      <td>0.370787</td>\n",
+       "      <td>0.000051</td>\n",
+       "      <td>0.051427</td>\n",
+       "      <td>0.052774</td>\n",
+       "      <td>0.032902</td>\n",
+       "      <td>0.043273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>932.870550</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>13.285714</td>\n",
-       "      <td>12.833333</td>\n",
-       "      <td>14.800000</td>\n",
-       "      <td>8.600000</td>\n",
+       "      <td>0.550562</td>\n",
+       "      <td>0.885714</td>\n",
+       "      <td>0.280000</td>\n",
+       "      <td>0.434712</td>\n",
+       "      <td>0.550562</td>\n",
+       "      <td>0.000085</td>\n",
+       "      <td>0.201625</td>\n",
+       "      <td>0.068654</td>\n",
+       "      <td>0.143359</td>\n",
+       "      <td>0.068083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>1997.0</td>\n",
-       "      <td>147.0</td>\n",
-       "      <td>2136.847114</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>827.0</td>\n",
-       "      <td>22.358824</td>\n",
-       "      <td>22.788889</td>\n",
-       "      <td>20.786667</td>\n",
-       "      <td>20.813333</td>\n",
+       "      <td>0.404494</td>\n",
+       "      <td>0.761905</td>\n",
+       "      <td>0.420000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.404494</td>\n",
+       "      <td>0.001390</td>\n",
+       "      <td>0.374440</td>\n",
+       "      <td>0.134165</td>\n",
+       "      <td>0.213706</td>\n",
+       "      <td>0.209018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1877,68 +1893,68 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15502</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1979.0</td>\n",
-       "      <td>131.0</td>\n",
-       "      <td>147.817606</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>10.075000</td>\n",
-       "      <td>11.180000</td>\n",
-       "      <td>9.166667</td>\n",
-       "      <td>7.000000</td>\n",
+       "      <td>0.550562</td>\n",
+       "      <td>0.590476</td>\n",
+       "      <td>0.366667</td>\n",
+       "      <td>0.066116</td>\n",
+       "      <td>0.550562</td>\n",
+       "      <td>0.000085</td>\n",
+       "      <td>0.140471</td>\n",
+       "      <td>0.057775</td>\n",
+       "      <td>0.077163</td>\n",
+       "      <td>0.049620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15503</th>\n",
-       "      <td>6.8</td>\n",
-       "      <td>1989.0</td>\n",
-       "      <td>125.0</td>\n",
-       "      <td>266.903448</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>19.885714</td>\n",
-       "      <td>33.170370</td>\n",
-       "      <td>8.933333</td>\n",
-       "      <td>16.890909</td>\n",
+       "      <td>0.528090</td>\n",
+       "      <td>0.685714</td>\n",
+       "      <td>0.346667</td>\n",
+       "      <td>0.122029</td>\n",
+       "      <td>0.528090</td>\n",
+       "      <td>0.000066</td>\n",
+       "      <td>0.327334</td>\n",
+       "      <td>0.202478</td>\n",
+       "      <td>0.074421</td>\n",
+       "      <td>0.163756</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15504</th>\n",
-       "      <td>5.6</td>\n",
-       "      <td>1988.0</td>\n",
-       "      <td>131.0</td>\n",
-       "      <td>2136.847114</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>8.075000</td>\n",
-       "      <td>54.025000</td>\n",
-       "      <td>5.700000</td>\n",
-       "      <td>5.600000</td>\n",
+       "      <td>0.393258</td>\n",
+       "      <td>0.676190</td>\n",
+       "      <td>0.366667</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.393258</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>0.102377</td>\n",
+       "      <td>0.339708</td>\n",
+       "      <td>0.036427</td>\n",
+       "      <td>0.033464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15505</th>\n",
-       "      <td>5.5</td>\n",
-       "      <td>1999.0</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>1745.889023</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>655.0</td>\n",
-       "      <td>13.225000</td>\n",
-       "      <td>90.500000</td>\n",
-       "      <td>15.645455</td>\n",
-       "      <td>50.702222</td>\n",
+       "      <td>0.382022</td>\n",
+       "      <td>0.780952</td>\n",
+       "      <td>0.360000</td>\n",
+       "      <td>0.816438</td>\n",
+       "      <td>0.382022</td>\n",
+       "      <td>0.001099</td>\n",
+       "      <td>0.200469</td>\n",
+       "      <td>0.579724</td>\n",
+       "      <td>0.153293</td>\n",
+       "      <td>0.553921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15508</th>\n",
-       "      <td>7.2</td>\n",
-       "      <td>1998.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>2136.847114</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>22.350000</td>\n",
-       "      <td>145.753571</td>\n",
-       "      <td>48.532558</td>\n",
-       "      <td>10.180000</td>\n",
+       "      <td>0.573034</td>\n",
+       "      <td>0.771429</td>\n",
+       "      <td>0.363333</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.573034</td>\n",
+       "      <td>0.000025</td>\n",
+       "      <td>0.374271</td>\n",
+       "      <td>0.943308</td>\n",
+       "      <td>0.539740</td>\n",
+       "      <td>0.086315</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1946,36 +1962,36 @@
        "</div>"
       ],
       "text/plain": [
-       "       Name    Year  Duration        Genre  Rating  Votes   Director  \\\n",
-       "1       8.0  2019.0     109.0  2136.847114     7.0    8.0   8.000000   \n",
-       "2       7.0  2021.0      90.0   234.788646     6.0   55.0   7.000000   \n",
-       "3       5.4  2019.0     110.0   802.884065     4.4   35.0   5.400000   \n",
-       "4       7.0  2010.0     105.0   932.870550     6.0   55.0  13.285714   \n",
-       "5       5.7  1997.0     147.0  2136.847114     4.7  827.0  22.358824   \n",
-       "...     ...     ...       ...          ...     ...    ...        ...   \n",
-       "15502   7.0  1979.0     131.0   147.817606     6.0   55.0  10.075000   \n",
-       "15503   6.8  1989.0     125.0   266.903448     5.8   44.0  19.885714   \n",
-       "15504   5.6  1988.0     131.0  2136.847114     4.6   11.0   8.075000   \n",
-       "15505   5.5  1999.0     129.0  1745.889023     4.5  655.0  13.225000   \n",
-       "15508   7.2  1998.0     130.0  2136.847114     6.2   20.0  22.350000   \n",
+       "           Name      Year  Duration     Genre    Rating     Votes  Director  \\\n",
+       "1      0.662921  0.971429  0.293333  1.000000  0.662921  0.000005  0.100949   \n",
+       "2      0.550562  0.990476  0.230000  0.106951  0.550562  0.000085  0.081902   \n",
+       "3      0.370787  0.971429  0.296667  0.373681  0.370787  0.000051  0.051427   \n",
+       "4      0.550562  0.885714  0.280000  0.434712  0.550562  0.000085  0.201625   \n",
+       "5      0.404494  0.761905  0.420000  1.000000  0.404494  0.001390  0.374440   \n",
+       "...         ...       ...       ...       ...       ...       ...       ...   \n",
+       "15502  0.550562  0.590476  0.366667  0.066116  0.550562  0.000085  0.140471   \n",
+       "15503  0.528090  0.685714  0.346667  0.122029  0.528090  0.000066  0.327334   \n",
+       "15504  0.393258  0.676190  0.366667  1.000000  0.393258  0.000010  0.102377   \n",
+       "15505  0.382022  0.780952  0.360000  0.816438  0.382022  0.001099  0.200469   \n",
+       "15508  0.573034  0.771429  0.363333  1.000000  0.573034  0.000025  0.374271   \n",
        "\n",
-       "          Actor 1    Actor 2    Actor 3  \n",
-       "1        8.850000   8.000000   8.000000  \n",
-       "2        8.500000   9.900000   7.000000  \n",
-       "3       10.420000   5.400000   6.450000  \n",
-       "4       12.833333  14.800000   8.600000  \n",
-       "5       22.788889  20.786667  20.813333  \n",
-       "...           ...        ...        ...  \n",
-       "15502   11.180000   9.166667   7.000000  \n",
-       "15503   33.170370   8.933333  16.890909  \n",
-       "15504   54.025000   5.700000   5.600000  \n",
-       "15505   90.500000  15.645455  50.702222  \n",
-       "15508  145.753571  48.532558  10.180000  \n",
+       "        Actor 1   Actor 2   Actor 3  \n",
+       "1      0.042443  0.063454  0.061159  \n",
+       "2      0.040140  0.085780  0.049620  \n",
+       "3      0.052774  0.032902  0.043273  \n",
+       "4      0.068654  0.143359  0.068083  \n",
+       "5      0.134165  0.213706  0.209018  \n",
+       "...         ...       ...       ...  \n",
+       "15502  0.057775  0.077163  0.049620  \n",
+       "15503  0.202478  0.074421  0.163756  \n",
+       "15504  0.339708  0.036427  0.033464  \n",
+       "15505  0.579724  0.153293  0.553921  \n",
+       "15508  0.943308  0.539740  0.086315  \n",
        "\n",
        "[11085 rows x 10 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2010,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2021,15 +2037,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error (MSE): 0.33\n",
-      "Mean Absolute Percentage Error (MAPE): 0.07\n",
+      "Mean Squared Error (MSE): 0.00\n",
+      "Mean Absolute Percentage Error (MAPE): 0.09\n",
       "R-squared (R2) Score: 0.75\n"
      ]
     }
@@ -2047,16 +2063,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7481355776918184"
+       "0.7484756963846445"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2067,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2081,16 +2097,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error (MSE): 0.14\n",
+      "Mean Squared Error (MSE): 0.00\n",
       "Mean Absolute Percentage Error (MAPE): 0.03\n",
-      "R-squared (R2) Score: 0.89\n"
+      "R-squared (R2) Score: 0.90\n"
      ]
     }
    ],
@@ -2107,16 +2123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8935215576307229"
+       "0.9000120789813641"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2141,16 +2157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error (MSE): 0.25\n",
-      "Mean Absolute Percentage Error (MAPE): 0.03\n",
-      "R-squared (R2) Score: 0.81\n"
+      "Mean Squared Error (MSE): 0.00\n",
+      "Mean Absolute Percentage Error (MAPE): 0.04\n",
+      "R-squared (R2) Score: 0.80\n"
      ]
     }
    ],
